# libtropic-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  flake.nix  rustfmt.toml
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml
hardware_tests/: mod.rs
notes/: rng_data_extraction_annotations.txt  serial_mitm.md
src/: aes_utils.rs  checksum.rs  checksum_tests.rs  comms.rs  hkdf.rs  hkdf_tests.rs  lib.rs  main.rs  utils.rs
src/commands/: get_random_bytes.rs  get_random_bytes_tests.rs  mod.rs  ping.rs  ping_tests.rs
src/frames/: encrypted_cmd_req.rs  encrypted_cmd_req_tests.rs  get_info_req.rs  get_info_req_tests.rs  handshake_req.rs  handshake_req_tests.rs  mod.rs
tropic01/: Cargo.toml  LICENSE  README.md
tropic01-example-rpi/: Cargo.toml  LICENSE  README.md  tropic_spi_overlay.dts
tropic01-example-rpi/src/: linux.rs  main.rs
tropic01-example-usb-devkit/: Cargo.toml  LICENSE  README.md
tropic01-example-usb-devkit/src/: ecc_eddsa.rs  full_chain_verification.rs  hello_world.rs  identify_chip.rs  main.rs  usb_dongle.rs
tropic01/src/: crc16.rs  crypto.rs  keys.rs  lib.rs  lt_1.rs  lt_2.rs  lt_3.rs
