[package]
name = "tropic01_communication"
version = "0.1.0"
edition = "2024"

[dependencies]
crc = "3.2.1"
hmac = "0.12.1"
serialport = "4.7.0"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }


[dev-dependencies]
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
