[package]
name = "tropic01-example-rpi"
description = "Demo app for TROPIC01 secure chip on Raspberry Pi"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file = "LICENSE"
publish = false
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tropic01 = { path = "../tropic01", default-features = false, features = [
  "keys",
  "x25519-dalek",
] }

anyhow = { version = "1.0.98", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
linux-embedded-hal = { version = "0.4.0", default-features = false, features = ["spi"] }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
rppal = { version = "0.22.1", features = ["embedded-hal"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = [
  "static_secrets",
] }
sha2 = { version = "0.10.9", default-features = false }
tokio = { version = "1.45.1", features = ["full"] }
