[package]
name = "tropic01"
description = "An embedded-hal driver for the TROPIC01 chip by TropicSquare"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "arrayvec"] }
derive_more = { version = "2", default-features = false, features = [
  "display",
  "error",
  "from",
] }
dummy-pin = { version = "1.0.0", default-features = false }
embedded-hal = { version = "1", default-features = false }
hmac = { version = "0.12", default-features = false }
nom = { version = "7.1.3", default-features = false }
nom-derive = { version = "0.10.1", default-features = false }
packed_struct = { version = "0.10.1", default-features = false }
sha2 = { version = "0.10", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = [
  "static_secrets",
  "zeroize",
] }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
zeroize = { version = "1", default-features = false, features = ["derive"] }

[features]
default = ["keys"]
keys = []
